testsuite/tests/polykinds/T14561.stderr

T14561.hs:12:9: error:
    Cannot use function with levity-polymorphic arguments:
      unsafeCoerce# :: a -> a
    Levity-polymorphic arguments: a :: TYPE r
